[gd_scene load_steps=3 format=3 uid="uid://cu8c1myhjbwx3"]

[ext_resource type="Script" path="res://scripts/Dialogue.gd" id="2_qu7hi"]
[ext_resource type="FontFile" uid="uid://cuk848i8503r0" path="res://assets/fonts/nasalization-rg.otf" id="2_x0jo5"]

[node name="Dialogue" type="Node2D"]

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(46, 457)
points = PackedVector2Array(0, 2, 0, 142, 1056, 142, 1056, 2)
closed = true
width = 2.0
joint_mode = 2

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 47.0
offset_top = 459.0
offset_right = 1100.0
offset_bottom = 599.0
color = Color(0.235294, 0.235294, 0.235294, 0.345098)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 52.0
offset_top = 470.0
offset_right = 1089.0
offset_bottom = 615.0
theme_override_fonts/normal_font = ExtResource("2_x0jo5")
theme_override_fonts/bold_font = ExtResource("2_x0jo5")
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
autowrap_mode = 2
script = ExtResource("2_qu7hi")

[node name="next_char" type="Timer" parent="RichTextLabel"]

[node name="2sec" type="Timer" parent="RichTextLabel"]
wait_time = 4.0

[connection signal="timeout" from="RichTextLabel/next_char" to="RichTextLabel" method="_on_next_char_timeout"]
[connection signal="timeout" from="RichTextLabel/2sec" to="RichTextLabel" method="_on_sec_timeout"]
